# stock-trader

./: .env.example  .gitignore  README.md
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/adapters/: base.py  binance.py  upbit.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_backtest_results.py  003_live_orders.py  004_portfolio_snapshots.py  005_user_api_keys.py  006_optimization_results.py  007_ml_models.py  008_portfolio_allocations.py
backend/api/: deps.py  main.py
backend/api/routers/: analytics.py  api_keys.py  auth.py  backtest.py  exchange_settings.py  health.py  ohlcv.py  optimization.py  orders.py  portfolio.py  prediction.py  risk.py  sentiment.py  strategies.py  websocket.py
backend/core/: config.py  logging.py  security.py
backend/db/: redis.py  session.py
backend/db/models/: backtest_result.py  ohlcv.py  user.py
backend/engine/: order_manager.py  risk_manager.py  trading_engine.py
backend/engine/strategies/: base.py  macd_strategy.py  rsi_strategy.py  sentiment_strategy.py
backend/services/analytics/: performance.py
backend/services/backtesting/: runner.py
backend/services/ml/: lstm_model.py
backend/services/notifications/: telegram.py
backend/services/optimization/: optimizer.py
backend/services/portfolio/: allocation.py  correlation.py
backend/services/sentiment/: aggregator.py  finbert_scorer.py  news_fetcher.py
backend/tasks/: analytics_tasks.py  backtest_tasks.py  celery_app.py  ml_tasks.py  optimization_tasks.py  sentiment_tasks.py
frontend/: Dockerfile  index.html  nginx.conf  (+3 more)
(+35 files in other folders)
