[project]
name = "stock-trader-backend"
version = "0.1.0"
description = "Automated cryptocurrency trading bot backend"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Cache & messaging
    "redis[asyncio]>=5.0.4",

    # Exchange
    "python-binance>=1.0.19",
    "websockets>=12.0",

    # Sync DB driver (used by Celery workers)
    "psycopg2-binary>=2.9.9",

    # Config & validation
    "pydantic-settings>=2.2.1",
    "pydantic>=2.7.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",

    # HTTP client
    "httpx>=0.27.0",

    # Task queue
    "celery>=5.3.6",

    # Logging
    "python-json-logger>=2.0.7",

    # Sentiment analysis
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
